# School-Hostel-Enterprise-API

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260714_0001_initial.py
app/: main.py
app/api/: router.py
app/api/endpoints/: academics.py  admin.py  attendance.py  auth.py  fees.py  hostel.py  mess.py  operations.py  students.py  system.py  users.py
app/core/: config.py  dependencies.py  middleware.py  security.py
app/db/: base.py  session.py
app/models/: entities.py
app/schemas/: __init__.py  api.py  common.py
app/services/: audit.py
app/tasks/: celery_app.py
docs/: ARCHITECTURE.md  PRODUCTION_CHECKLIST.md
scripts/: export_openapi.py  seed.py
tests/: conftest.py  test_lifecycle.py
