[project]
name = "school-hostel-enterprise-api"
version = "1.0.0"
description = "Enterprise FastAPI backend for school and hostel management"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
